@@ -139,6 +139,11 @@ int main(int argc, char** argv)
 	bind_textdomain_codeset (PACKAGE "-lib", "UTF-8");
 	textdomain (PACKAGE "-editor");
 
+        if (!filesystem_init()) {
+		std::cerr << "cannot init filesystem code\n";
+		return 1;
+	}
+
 	// Blatant cut and paste from game.cpp
 	image::set_wm_icon();
 	int video_flags = preferences::fullscreen() ? FULL_SCREEN : 0;
